<?xml version="1.0"?>
<package format="2">
  <name>pcl_ros_wrapper</name>
  <version>0.0.1</version>
  <description>Wrapper for PCL ROS filtering</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Export section (important for finding executables) -->
  <export>
    <build_type>catkin</build_type>
  </export>

</package>
